--- a/main.html
+++ b/main.html
@@ -4,10 +4,58 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <!-- Write your code here -->
-    <!-- Bootstrap Bundle with Popper -->
+
+    <!-- Carousel -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        
+        <!-- Slides -->
+        <div class="carousel-inner">
+            <div class="item first-slide">
+                <div class="carousel-caption">
+                    <h3>First Slide</h3>
+                </div>
+            </div>
+
+            <div class="item second-slide">
+                <div class="carousel-caption">
+                    <h3>Second Slide</h3>
+                </div>
+            </div>
+
+            <!-- Third slide is active on load -->
+            <div class="item third-slide active">
+                <div class="carousel-caption">
+                    <h3>Third Slide (Active)</h3>
+                </div>
+            </div>
+
+            <div class="item fourth-slide">
+                <div class="carousel-caption">
+                    <h3>Fourth Slide</h3>
+                </div>
+            </div>
+
+            <div class="item fifth-slide">
+                <div class="carousel-caption">
+                    <h3>Fifth Slide</h3>
+                </div>
+            </div>
+        </div>
+
+        <!-- Left and Right Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+
+    </div>
+
+    <!-- Bootstrap Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </body>
- 
 </html>
