--- a/main.html
+++ b/main.html
@@ -2,13 +2,27 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    
+    <style>
+        #myCarousel {
+            height: 400px;
+        }
+
+        .carousel-inner > .item {
+            height: 400px;
+        }
+
+        .first-slide { background-color: lightcoral; }
+        .second-slide { background-color: lightblue; }
+        .third-slide { background-color: lightgreen; }
+        .fourth-slide { background-color: lightgoldenrodyellow; }
+        .fifth-slide { background-color: lightpink; }
+    </style>
 </head>
 <body>
 
-    <!-- Carousel -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        
-        <!-- Slides -->
+
         <div class="carousel-inner">
             <div class="item first-slide">
                 <div class="carousel-caption">
@@ -22,7 +36,6 @@
                 </div>
             </div>
 
-            <!-- Third slide is active on load -->
             <div class="item third-slide active">
                 <div class="carousel-caption">
                     <h3>Third Slide (Active)</h3>
@@ -42,7 +55,7 @@
             </div>
         </div>
 
-        <!-- Left and Right Controls -->
+        <!-- Controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
@@ -53,7 +66,6 @@
 
     </div>
 
-    <!-- Bootstrap Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
